Refactor HTML and CSS to have nice effects

--- a/index.html
+++ b/index.html
@@ -115,68 +115,116 @@
 
 <div id="hydra-heads">
 	<div id="localData" class="hydra-head-loading">
-		<span id="localDataValue">???</span>
-		<label>LocalStorage</label>
+		<input type="hidden" id="localDataState" value="loading"/>
+		<div id="localDataValue" class="head-value">???</div>
+		<div class="head-label">LocalStorage</div>
+		<div class="head-illustration"></div>
+		<div class="head-background"></div>
 	</div>
 	<div id="sessionData" class="hydra-head-loading">
-		<span id="sessionDataValue">???</span>
-		<label>SessionStorage</label>
+		<input type="hidden" id="sessionDataState" value="loading"/>
+		<div id="sessionDataValue" class="head-value">???</div>
+		<div class="head-label">SessionStorage</div>
+		<div class="head-illustration"></div>
+		<div class="head-background"></div>
 	</div>
 	<div id="windowData" class="hydra-head-loading">
-		<span id="windowDataValue">???</span>
-		<label>Window name</label>
+		<input type="hidden" id="windowDataState" value="loading"/>
+		<div id="windowDataValue" class="head-value">???</div>
+		<div class="head-label">Window name</div>
+		<div class="head-illustration"></div>
+		<div class="head-background"></div>
 	</div>
 	<div id="dbData" class="hydra-head-loading">
-		<span id="dbDataValue">???</span>
-		<label>Web SQL DB</label>
+		<input type="hidden" id="dbDataState" value="loading"/>
+		<div id="dbDataValue" class="head-value">???</div>
+		<div class="head-label">Web SQL DB</div>
+		<div class="head-illustration"></div>
+		<div class="head-background"></div>
 	</div>
 	<div id="idbData" class="hydra-head-loading">
-		<span id="idbDataValue">???</span>
-		<label>Indexed DB</label>
+		<input type="hidden" id="idbDataState" value="loading"/>
+		<div id="idbDataValue" class="head-value">???</div>
+		<div class="head-label">Indexed DB</div>
+		<div class="head-illustration"></div>
+		<div class="head-background"></div>
 	</div>
 	<div id="cookieData" class="hydra-head-loading">
-		<span id="cookieDataValue">???</span>
-		<label>HTTP Cookie</label>
+		<input type="hidden" id="cookieDataState" value="loading"/>
+		<div id="cookieDataValue" class="head-value">???</div>
+		<div class="head-label">HTTP Cookie</div>
+		<div class="head-illustration"></div>
+		<div class="head-background"></div>
 	</div>
 	<div id="cacheData" class="hydra-head-loading">
-		<span id="cacheDataValue">???</span>
-		<label>Web Cache</label>
+		<input type="hidden" id="cacheDataState" value="loading"/>
+		<div id="cacheDataValue" class="head-value">???</div>
+		<div class="head-label">Web Cache</div>
+		<div class="head-illustration"></div>
+		<div class="head-background"></div>
 	</div>
 	<div id="etagData" class="hydra-head-loading">
-		<span id="etagDataValue">???</span>
-		<label>Etags</label>
+		<input type="hidden" id="etagDataState" value="loading"/>
+		<div id="etagDataValue" class="head-value">???</div>
+		<div class="head-label">Etags</div>
+		<div class="head-illustration"></div>
+		<div class="head-background"></div>
 	</div>
 	<div id="pngData" class="hydra-head-loading">
-		<span id="pngDataValue">???</span>
-		<label>PNG reading</label>
+		<input type="hidden" id="pngDataState" value="loading"/>
+		<div id="pngDataValue" class="head-value">???</div>
+		<div class="head-label">PNG reading</div>
+		<div class="head-illustration"></div>
+		<div class="head-background"></div>
 	</div>
 	<div id="historyData" class="hydra-head-loading">
-		<span id="historyDataValue">???</span>
-		<label>CSS History</label>
+		<input type="hidden" id="historyDataState" value="loading"/>
+		<div id="historyDataValue" class="head-value">???</div>
+		<div class="head-label">CSS History</div>
+		<div class="head-illustration"></div>
+		<div class="head-background"></div>
 	</div>
 	<div id="javaData" class="hydra-head-loading">
-		<span id="javaDataValue">???</span>
-		<label>Java Applet</label>
+		<input type="hidden" id="javaDataState" value="loading"/>
+		<div id="javaDataValue" class="head-value">???</div>
+		<div class="head-label">Java Applet</div>
+		<div class="head-illustration"></div>
+		<div class="head-background"></div>
 	</div>
 	<div id="lsoData" class="hydra-head-loading">
-		<span id="lsoDataValue">???</span>
-		<label>Flash Cookie</label>
+		<input type="hidden" id="lsoDataState" value="loading"/>
+		<div id="lsoDataValue" class="head-value">???</div>
+		<div class="head-label">Flash Cookie</div>
+		<div class="head-illustration"></div>
+		<div class="head-background"></div>
 	</div>
 	<div id="hstsData" class="hydra-head-loading">
-		<span id="hstsDataValue">???</span>
-		<label>HSTS</label>
+		<input type="hidden" id="hstsDataState" value="loading"/>
+		<div id="hstsDataValue" class="head-value">???</div>
+		<div class="head-label">HSTS</div>
+		<div class="head-illustration"></div>
+		<div class="head-background"></div>
 	</div>
 	<div id="slData" class="hydra-head-loading">
-		<span id="slDataValue">???</span>
-		<label>Silverlight</label>
+		<input type="hidden" id="slDataState" value="loading"/>
+		<div id="slDataValue" class="head-value">???</div>
+		<div class="head-label">Silverlight</div>
+		<div class="head-illustration"></div>
+		<div class="head-background"></div>
 	</div>
 	<div id="userData" class="hydra-head-loading">
-		<span id="userDataValue">???</span>
-		<label>User Data</label>
+		<input type="hidden" id="userDataState" value="loading"/>
+		<div id="userDataValue" class="head-value">???</div>
+		<div class="head-label">User Data</div>
+		<div class="head-illustration"></div>
+		<div class="head-background"></div>
 	</div>
 	<div id="globalData" class="hydra-head-loading">
-		<span id="globalDataValue">???</span>
-		<label>GlobalStorage</label>
+		<input type="hidden" id="globalDataState" value="loading"/>
+		<div id="globalDataValue" class="head-value">???</div>
+		<div class="head-label">GlobalStorage</div>
+		<div class="head-illustration"></div>
+		<div class="head-background"></div>
 	</div>
 </div>
 
@@ -215,6 +263,7 @@
 		const toggleValue = toggleValueFromUrl(toggleName);
 		if (!toggleValue) {
 			document.getElementById(toggleName + 'Data').className = 'hydra-head-hidden';
+			document.getElementById(toggleName + 'DataState').value = 'hidden';
 		} else {
 			document.getElementById(toggleName + 'Toggle').checked = true;
 		}
@@ -252,16 +301,26 @@
 		silverlight: toggleValueFromUrl('sl'),
 		publisher: function(item, value) {
 			//console.log('item = ' + item + '; value = ' + value);
-			if (document.getElementById(item) && document.getElementById(item + 'Value')) {
-				let className = "hydra-head-dead";
-				if (value) {
-					className = "hydra-head-alive";
+			if (document.getElementById(item)
+					&& document.getElementById(item + 'Value')
+					&& document.getElementById(item + 'State')) {
+				let currentHeadState = document.getElementById(item + 'State').value;
+				let newHeadState = currentHeadState;
+				if (currentHeadState !== 'hidden') {
+					if (value) {
+						newHeadState = 'alive';
+					} else {
+						newHeadState = 'dead';
+					}
+					if (newHeadState !== currentHeadState) {
+						document.getElementById(item).className = 'hydra-head-' + newHeadState;
+						document.getElementById(item + 'State').value = newHeadState;
+					}
 				}
-				if (document.getElementById(item).className !== 'hydra-head-hidden'
-						&& document.getElementById(item).className !== className) {
-					document.getElementById(item).className = className;
+				let currentValue = document.getElementById(item + 'Value').innerHTML;
+				if (value !== currentValue) {
+					document.getElementById(item + 'Value').innerHTML = value ? value : '???';
 				}
-				document.getElementById(item + 'Value').innerHTML = value ? value : '???';
 			}
 		}
 	});
@@ -287,7 +346,16 @@
 		clearInterval(refreshInterval);
 		// Wait for previous refresh to finish before regeneration
 		// (it could take 300ms)
-		setTimeout(refreshZombieCookieState, 300, 0); // '0' means regeneration of all the dead heads !
+		setTimeout(function() {
+			// Glow effect on alive heads !
+			[].forEach.call(document.getElementsByClassName('hydra-head-alive'), function(el) {
+				el.classList.remove('glow');
+				// Triggering reflow ...
+				void el.offsetWidth;
+				el.classList.add('glow');
+			});
+			refreshZombieCookieState(0); // '0' means regeneration of all the dead heads !
+		}, 300);
 		autorefreshZombieCookie();
 	}
 
